--- a/public/css/site.css
+++ b/public/css/site.css
@@ -2,15 +2,20 @@ body {
   font-family: 'Helvetica Neue', Verdana, Helvetica, Arial, sans-serif;
   max-width: 600px;
   margin: 0 auto;
-  padding-top: 72px;
+
+
   -webkit-font-smoothing: antialiased;
   font-size: 1.125em;
   color: #333;
   line-height: 1.5em;
 }
+#app {
+  height: 100vh;
+}
 
-h1, h2, h3 {
-  color: #000;
+p {
+  margin: 0;
+  padding: 0;
 }
 h1 {
   font-size: 2.5em
@@ -21,7 +26,8 @@ h2 {
 }
 
 h3 {
-  font-size: 1.5em
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -31,4 +37,38 @@ a {
 
 a:hover {
   text-decoration: underline;
+}
+.main-container {
+  box-sizing: border-box;
+  background-color: #09f;
+  padding: 1rem 2rem;
+  height: 100%;
+}
+.todo-form {
+  display: flex;
+  flex-direction: column;
+}
+.todo-form label {
+  font-size: 1rem;
+}
+.todo-form input[type="submit"] {
+  margin-top: 0.5rem;
+  padding: 4px;
+}
+ul {
+  list-style: none;
+  padding: 8px 0;
+  margin: 0;
+}
+.todo-item {
+  box-sizing: border-box;
+  padding: 1rem 2rem;
+  background-color: rgb(238, 110, 25);
+  color: white;
+  border-radius: 8px;
+  margin: 8px 0;
+}
+.done {
+  background-color: rgb(97, 208, 52);
+  color: #333;
 }
